--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-react-ts-app",
-  "homepage": "https://Abulfelton.gitub.io/Coalition_Frontend_dev/",
+  "homepage": "https://Abdulfelton.gitub.io/Coalition_Frontend_dev/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
